Bug 78112 - Print preview displays underlined spelling errors after displaying field shadings
Summary: Print preview displays underlined spelling errors after displaying field shad...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
4.2.3.3 release
Hardware: Other Windows (All)
: low trivial
Assignee: Caolán McNamara
URL:
Whiteboard: target:5.3.0
Keywords:
: 76920 (view as bug list)
Depends on:
Blocks:
 
Reported: 2014-04-30 12:15 UTC by Vladimir Rutsky
Modified: 2016-10-25 18:40 UTC (History)
4 users (show)

See Also:
Crash report or crash signature:


Attachments
screenshot of red underline in print preview (45.21 KB, image/png)
2014-04-30 12:15 UTC, Vladimir Rutsky
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Vladimir Rutsky 2014-04-30 12:15:19 UTC
Created attachment 98237 [details]
screenshot of red underline in print preview

Steps to reproduce:
1. Start Writer.
2. Enter gibberish text, such as "sdfkjdfisbfisbhf sf sdf sdfsdf".
3. Wait until text will be underlined - spelling errors detected.

Now you can press Page Preview and see, that red underline not included in print preview.

4. Enable displaying of field shadings (View -> Field Shadings).
5. Press Page Preview to see print preview.

Expected result: text should be displayed without underlined spelling errors.

Observed behavior: red underline under misspelled words included in print preview.
Comment 1 Tomaz Vajngerl 2014-05-08 09:08:38 UTC
Confirmed.
Comment 2 Gordo 2015-05-16 12:09:32 UTC
It also happens when toggling other items in the View menu:  Non-printing Characters, Ruler, Text Boundaries, Field Names, Web Layout, and Images.

Bug is then present until LO is restarted.

Windows Vista 64
Version: 4.4.3.2
Build ID: 88805f81e9fe61362df02b9941de8e38a9b5fd16
Comment 3 Caolán McNamara 2016-07-08 20:05:40 UTC
*** Bug 76920 has been marked as a duplicate of this bug. ***
Comment 4 Commit Notification 2016-07-09 14:41:01 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=88a3cd7a39fc3dbbe8627c4bb1fc1195136df432

Resolves: tdf#78112 print preview underlines spelling errors...

It will be available in 5.3.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.