Resolves: tdf#78112 print preview underlines spelling errors...

after unrelated display option used, e.g. display field shadings

Change-Id: I61cb2456fb4b048fab571d0f2c57855ea4da0336